tests/run-pass/closure_uses_outer_binding.ori
// Test that closures can use outer bindings (not self-capture)
// Spec: 15-memory-model.md ยง Compile-Time Cycle Prevention
// Design: 04-memory-management/02-arc.md ยง Cycle Detection
//
// A closure using a variable from outer scope is NOT self-capture.
// This should compile and run without error.

@main () -> int = {
    let x = 42;
    let get_x = () -> x;
    get_x()
}
