tests/compile-fail/closure_self_capture.ori
// Test that closure self-capture is detected
// Spec: 15-memory-model.md ยง Compile-Time Cycle Prevention
// Design: 04-memory-management/02-arc.md ยง Cycle Detection
//
// A closure cannot capture itself as this would create a reference cycle
// that cannot be broken by ARC without a backup garbage collector.

#[compile_fail("closure cannot capture itself")]
@test_self_capture () -> void = {
    let f = () -> f;
    ()
}
